data/derived/fa15/progs/unify/prog2212.ml.out
Characters 203-204:
  | Average(t,s) -> ((eval(t,x,y)+.eval(s,x,y))/.2);;
                                                 ^
Error: This expression has type int but an expression was expected of type
         float
